// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search View should render when no addons are passed 1`] = `
"<div class=\\"survivor\\">
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">Adam</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(97, 81, 60);\\"><img alt=\\"Adam\\" src=\\"https://dqr3pglopijar.cloudfront.net/assets/adam.png\\"></div>
  </div>
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">MacBook Pro 2018</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"MacBook Pro 2018\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"firecracker-buffer\\"></div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Archetecture</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Archetecture\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Dockerised</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Dockerised\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Carpel Tunneling</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Carpel Tunneling\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">8 Hour Nap</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"8 Hour Nap\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
</div>"
`;

exports[`Search View should render when the default object is passed 1`] = `
"<div class=\\"survivor\\">
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">Adam</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(97, 81, 60);\\"><img alt=\\"Adam\\" src=\\"https://dqr3pglopijar.cloudfront.net/assets/adam.png\\"></div>
  </div>
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">MacBook Pro 2018</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"MacBook Pro 2018\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">Evoluent Vertical Mouse 4</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Evoluent Vertical Mouse 4\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"square-icon\\">
    <p class=\\"square-icon_name\\">OLKB Preonic</p>
    <div class=\\"square-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"OLKB Preonic\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Archetecture</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Archetecture\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Dockerised</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Dockerised\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">Carpel Tunneling</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"Carpel Tunneling\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
  <div class=\\"diamond-icon\\">
    <p class=\\"diamond-icon_name\\">8 Hour Nap</p>
    <div class=\\"diamond-icon_icon\\" style=\\"background-color: rgb(255, 9, 85);\\"><img alt=\\"8 Hour Nap\\" src=\\"https://dqr3pglopijar.cloudfront.net/\\"></div>
  </div>
</div>"
`;
